--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h1>Tạo tên ngẫu nhiên theo cặp</h1>
     <label for="number">Số lượng muốn tạo:</label>
     <input type="number" id="number" placeholder="Nhập số lượng" value="10">
-    <label for="names">Kết quả:</label>
+    <label for="names">Dữ liệu nguồn:</label>
     <textarea id="names">
 Anh  
 Linh  
