--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       }
 
+      #alert {
+        display: none;
+        padding: 10px;
+        margin-bottom: 15px;
+        border: 1px solid #f5c2c7;
+        background-color: #f8d7da;
+        color: #842029;
+        border-radius: 4px;
+      }
+
       @media (max-width: 600px) {
         textarea,
         input,
@@ -87,6 +97,7 @@
   <body>
     <div class="container">
       <h1>Tạo tên ngẫu nhiên theo cặp</h1>
+      <div id="alert">Số lượng yêu cầu vượt quá số cặp có thể!</div>
       <label for="number">Số lượng muốn tạo:</label>
       <input type="number" id="number" placeholder="Nhập số lượng" value="10">
 
@@ -137,7 +148,8 @@ Huong
         const totalNames = names.length;
 
         if (n > totalNames * (totalNames - 1) / 2) {
-          alert("Số lượng yêu cầu vượt quá số cặp có thể!");
+          const alertDiv = document.getElementById("alert");
+          alertDiv.style.display = "block";
           return [];
         }
 
@@ -157,6 +169,9 @@ Huong
       }
 
       document.getElementById("generate").addEventListener("click", () => {
+        const alertDiv = document.getElementById("alert");
+        alertDiv.style.display = "none";
+
         const n = parseInt(document.getElementById("number").value) || 10;
         const namesInput = document.getElementById("names").value.trim().split("\n").filter(Boolean);
         const removeAccents = document.getElementById("removeAccents").value === "yes";
