--- a/index.html
+++ b/index.html
@@ -134,9 +134,7 @@
       textarea.value = data.join("\n");
       
       function nonAccentVietnamese(str) {
-        return str
-          .toLowerCase()
-          .replace(/à|á|ạ|ả|ã|â|ầ|ấ|ậ|ẩ|ẫ|ă|ằ|ắ|ặ|ẳ|ẵ/g, "a")
+        return str.replace(/à|á|ạ|ả|ã|â|ầ|ấ|ậ|ẩ|ẫ|ă|ằ|ắ|ặ|ẳ|ẵ/g, "a")
           .replace(/è|é|ẹ|ẻ|ẽ|ê|ề|ế|ệ|ể|ễ/g, "e")
           .replace(/ì|í|ị|ỉ|ĩ/g, "i")
           .replace(/ò|ó|ọ|ỏ|õ|ô|ồ|ố|ộ|ổ|ỗ|ơ|ờ|ớ|ợ|ở|ỡ/g, "o")
@@ -144,7 +142,7 @@
           .replace(/ỳ|ý|ỵ|ỷ|ỹ/g, "y")
           .replace(/đ/g, "d")
           .replace(/\u0300|\u0301|\u0303|\u0309|\u0323/g, "")
-          .replace(/\u02C6|\u0306|\u031B/g, "");
+          .replace(/\u02C6|\u0306|\u031B/g, "");        
       }
 
       function getRandomPairs(names, n) {
